# jarvisp-prod

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  WARP.md  WHATSAPP.md  biome.json  fly.toml
backend/: .env.example  .gitignore  Dockerfile  ENCRYPTION.md  MODELS.md  README.md  pyproject.toml  pyrightconfig.json  test_ispcube_real.py  test_ispcube_simple.py
backend/api/: schema.py  urls.py
backend/api/admin/: __init__.py  agent_handoff.py  billing_event.py  company.py  company_config.py  conversation.py  customer.py  feedback.py  ispcube_integration.py  knowledge_base.py  message.py  sector.py  template.py  tool_call_log.py
backend/api/constants/: __init__.py  choices.py  timezones.py
backend/api/fields/: __init__.py  encrypted.py  phone.py
backend/api/migrations/: 0001_initial.py  0002_alter_company_timezone_and_more.py  0003_alter_company_timezone.py  0004_alter_company_timezone_ispcubeintegration.py  0005_alter_ispcubeintegration_api_key_and_more.py  0006_customer.py  0007_alter_customer_company_alter_customer_name.py  0008_conversation.py  0009_alter_conversation_status.py  0010_alter_conversation_customer.py  0011_message.py  0012_toolcalllog.py  0013_knowledgebase.py  0014_agenthandoff.py  0015_alter_agenthandoff_conversation.py  0016_template.py  0017_feedback.py  0018_remove_customer_api_custome_company_f8631f_idx_and_more.py  0019_alter_customer_phone.py  0020_billingevent.py  (+6 more)
backend/config/: settings.py  urls.py  views.py
backend/services/: conversation_service.py  example_service.py  llm_service.py
backend/templates/: index.html
(+64 files in other folders)
