[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-unfold>=0.67.0",
    "graphene-django>=3.2.3",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.1.1",
]
